Changed margin on mobile - fix

--- a/style.css
+++ b/style.css
@@ -197,6 +197,6 @@ label{
     }
 
     .block-section{
-        margin: 0;
+        margin-right: 0;
     }
 }
